--- a/themes/Suite7/css/style.css
+++ b/themes/Suite7/css/style.css
@@ -5676,9 +5676,9 @@ div.password {
 }
 
 /* report layout */
-#report-editview-footer {width: 70%; float: left;}
+#report-editview-footer {width: 70%; margin-top: 8px;}
 
-#detailpanel_fields_select {float: left; width: 100%; overflow-y: auto; margin-right: 20px;}
+#detailpanel_fields_select { width: 100%; overflow-y: auto; margin-right: 20px;}
 .aor_dragbox {height: 250px; overflow: auto;}
 #report-editview-footer .tab-togglers {width: 80%;}
 #report-editview-footer .tab-toggler {display: block; float: left;}
@@ -5687,7 +5687,9 @@ div.password {
 #report-editview-footer .condition-sortable-handle {cursor: move;}
 #report-editview-footer .parenthesis-line strong {font-size: 18px}
 #report-editview-footer .drop-area.highlighted {background-color: #f7f7f7;}
-
+.aor-line-items-panel .drop-area {
+    min-height: 62px;
+}
 
 /* campaign wizard */
 .wizard-box {
