--- a/themes/SuiteP/css/editview.scss
+++ b/themes/SuiteP/css/editview.scss
@@ -2708,10 +2708,7 @@ thead#fieldLines_head > tr > td:nth-of-type(11) {
   background-color: $detail-view-field-bg;
   border-top: 2px solid $main-alternate-bg;
   border-bottom: 2px solid $main-alternate-bg;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
+  border-radius: 4px;
   line-height: $input-line-height;
   padding-bottom: 8px;
   padding-right: 4px;
