Added CSS classes for messages in default theme

--- a/themes/default/less/variables.less
+++ b/themes/default/less/variables.less
@@ -205,3 +205,19 @@
 @fluidGridColumnWidth:    6.382978723%;
 @fluidGridGutterWidth:    2.127659574%;
 
+// Messages
+// -------------------------
+@infoMessageTextColor:  	#778591;
+@infoMessageBgColor: 	        #d8f5ee;
+@errorMessageTextColor:         #fff;
+@errorMessageBgColor:	        #f08377;
+@alertMessageTextColor: 	#ad9d4a;
+@alertMessageBgColor:	        #F5E79E;
+@okayMessageTextColor: 	        #fff;
+@okayMessageBgColor: 	        #83c489;
+@workingMessageTextColor:	#898a8a;
+@workingMessageBgColor: 	#e6e6e6;
+@messagePadding: 		10px;
+@messageMarginBottom: 	        20px;
+@messageBorder: 		1px solid transparent;
+@messageBorderRadius: 	        4px;
