Added CSS classes for messages in SuiteR theme

--- a/themes/SuiteR/css/style.css
+++ b/themes/SuiteR/css/style.css
@@ -6211,3 +6211,30 @@ ul.clickMenu.SugarActionMenu.listViewLinkButton > li .ddopen {
         float: none;
     }
 }
+
+.message {
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.info {
+    background-color: #d8f5ee;
+    color: #778591;
+}
+
+.alert {
+    background-color: #F5E79E;
+    color: #ad9d4a;
+}
+
+.working {
+    background-color: #e6e6e6;
+    color: #898a8a;
+}
+
+.okay {
+    background-color: #83c489;
+    color: #fff;
+}
