inline checkboxes on editview

--- a/themes/SuiteP/css/editview.scss
+++ b/themes/SuiteP/css/editview.scss
@@ -5678,3 +5678,11 @@ div.content div.pagecontent form#EditView div.edit.view table tbody tr td input[
   }
 }
 
+form[name="EditView"] .checkbox-label {
+  float: left;
+}
+
+form[name="EditView"] .checkbox-container {
+  width: auto;
+}
+
