--- a/themes/SuiteP/css/editview.scss
+++ b/themes/SuiteP/css/editview.scss
@@ -547,11 +547,11 @@ table.view {
   font-size: 14px;
   font-weight: 700;
   color: $main-font-color;
-  padding: 0 0 0 8px;
-  line-height: 48px;
+  padding: 8px 0 0 8px;
+  line-height: 26px;
   text-align: left;
   vertical-align: baseline;
-  white-space: nowrap;
+  white-space: initial;
 }
 
 #lineItems {
@@ -3554,7 +3554,7 @@ select#sales_stage_advanced {
   }
 
   .col-sm-12 .col-sm-8.edit-view-field textarea#description {
-    width: 100%;
+    width: 120%;
   }
 
   .col-sm-12 .col-sm-8.edit-view-field textarea {
@@ -3657,7 +3657,7 @@ select#sales_stage_advanced {
   }
 
   .col-sm-12 .col-sm-8.edit-view-field textarea#description {
-    width: 100%;
+    width: 120%;
   }
 
   .col-sm-12 .col-sm-8.edit-view-field textarea {
