--- a/themes/SuiteP/css/variables.scss
+++ b/themes/SuiteP/css/variables.scss
@@ -153,6 +153,7 @@ $page-list-view-font-size: 12px;
 
 // mass assign form
 $mass-assign-color: #6A6578;
+$mass-assign-select-border-color: #94A6b5;
 
 // Filters / Search
 $filters-input-bg: #FFFFFF;
