--- a/themes/SuiteP/css/main.scss
+++ b/themes/SuiteP/css/main.scss
@@ -109,6 +109,12 @@ a:hover {
 
 .wizard-panel #importTable td {
   background-color: $main-alternate-bg;
+}
+
+.wizard-panel .step3 td {
+  line-height: $input-line-height;
+}
+.wizard-panel #importconfirm {
   line-height: $input-line-height;
 }
 
@@ -137,6 +143,98 @@ a:hover {
 
 .wizard-panel #DupeCheck > tbody > tr > td {
   display: inline-block;
+}
+
+.yui-module.import-stage-4 {
+  border: none;
+  border-bottom: 1px $active-tab-bg solid;
+}
+
+.scroll-h {
+  overflow-x: auto;
+}
+
+.import-stage-4 ul.subpanelTablist {
+  border: none;
+}
+
+.import-stage-4 ul.subpanelTablist li {
+  border: none;
+  display: inline-block;
+  margin: 0 0;
+  padding: 0;
+}
+
+.wizard-panel input[type="file"] {
+  background-color: $list-view-action-button-bg;
+  border-radius: 4px;
+  color: #fff;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.wizard-panel #importconfirm #importTable {
+  display: block;
+  width: 200%;
+}
+
+.wizard-panel #importconfirm #importTable tbody {
+  display: block;
+  width: 200%;
+
+}
+
+.wizard-panel #importconfirm #importTable tbody tr {
+  display: block;
+  width: 200%;
+}
+
+.wizard-panel #importconfirm #importTable tr:first-of-type td {
+  font-weight: bold;
+  border-bottom: 1px solid $active-tab-bg;
+  text-align: left;
+}
+
+.wizard-panel #importconfirm #importTable td {
+  width: 320px;
+}
+
+.import-stage-4 ul.subpanelTablist li a {
+  background-color: $default-tab-bg;
+  border: none;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  color: $default-tab-color;
+  cursor: pointer;
+  display: block;
+  font-size: $page-font-size;
+  font-weight: 400;
+  letter-spacing: 2px;
+  line-height: $tab-height;
+  margin: 0 2px;
+  padding: ($tab-height / 4) 10px;
+}
+
+.import-stage-4 ul.subpanelTablist li a span {
+  color: $default-tab-color;
+  font-size: $page-font-size;
+  font-weight: 400;
+  letter-spacing: 2px;
+
+}
+
+.import-stage-4 ul.subpanelTablist li a.current {
+  background-color: $active-tab-bg;
+  color: $action-tab-color;
+
+}
+
+.import-stage-4 ul.subpanelTablist li a:hover {
+  background-color: $active-tab-bg-hover;
+  color: $default-tab-color;
+  border: none;
 }
 
 /* ??? */
